# qa.guru_lesson_36_selenium

./: README.md  pyproject.toml
seleyasha/: browser.py  command.py  match.py  shared.py
tests/: test_google.py  test_google_custom.py
